--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Take out `/public/` in order to make it work with Firebase Hosting -->
+    <script src="/public/index.js"></script>
+
+    <link rel="icon" type="image/ico" href="/public/favicon.ico" />
+    <link rel="stylesheet" href="/public/index.css" />
   </head>
   <body>
     <h1>Here</h1>
