CSS and Favicon

--- a/go_brasil_ranking/public/index.html
+++ b/go_brasil_ranking/public/index.html
@@ -6,10 +6,11 @@
 
     <!-- Take out `/public/` in order to make it work with Firebase Hosting -->
     <script src="/public/index.js"></script>
+
+    <link rel="stylesheet" href="/public/index.css" />
+    <link rel="icon" type="image/ico" href="/public/favicon.ico" />
   </head>
   <body>
-    <h1>Here</h1>
-
     <main></main>
   </body>
 </html>
