--- a/go_brasil_ranking/public/index.html
+++ b/go_brasil_ranking/public/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/ico" href="/public/favicon.ico" />
   </head>
   <body>
+    <nav-bar></nav-bar>
+
     <main></main>
   </body>
 </html>
