now we have SGF diagrams on game record pages

--- a/go_brasil_ranking/public/index.html
+++ b/go_brasil_ranking/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Take out `/public/` in order to make it work with Firebase Hosting -->
-    <script src="/public/index.js"></script>
+    <script type="text/javascript" src="/public/index.js"></script>
 
     <link rel="stylesheet" href="/public/index.css" />
     <link rel="icon" type="image/ico" href="/public/favicon.ico" />
