better setup for global variables

--- a/go_brasil_ranking/public/index.html
+++ b/go_brasil_ranking/public/index.html
@@ -11,8 +11,10 @@
     <link rel="icon" type="image/ico" href="/public/favicon.ico" />
   </head>
   <body>
-    <nav-bar></nav-bar>
+    <header><nav-bar></nav-bar></header>
 
     <main></main>
+    
+    <footer></footer>
   </body>
 </html>
