better footer positioning

--- a/go_brasil_ranking/public/index.html
+++ b/go_brasil_ranking/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Take out `/public/` in order to make it work with Firebase Hosting -->
     <script type="text/javascript" src="/public/index.js"></script>
 
     <link rel="stylesheet" href="/public/index.css" />
@@ -14,7 +13,7 @@
     <header><nav-bar></nav-bar></header>
 
     <main></main>
-    
-    <footer></footer>
+
+    <footer><foot-er></foot-er></footer>
   </body>
 </html>
