closer to something functional on deployment

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
 
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="icon" type="image/ico" href="/favicon.ico" />
   </head>
   <body>
     <header><nav-bar></nav-bar></header>
