--- a/frontend/local/index.html
+++ b/frontend/local/index.html
@@ -14,6 +14,6 @@
 
     <main></main>
 
-    <footer><foot-er></foot-er></footer>
+    <footer><footer-container></footer-container></footer>
   </body>
 </html>
